tests/spec/emit/snapshots/generic_method_ufcs_argument_wraps_in_interface_adapter.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Thing { n: int }
  
  interface Box<T> {
    fn get() -> T
  }
  
  struct Bar {}
  
  impl Bar {
    fn get(self) -> Option<Ref<Thing>> {
      None
    }
  }
  
  struct Holder {}
  
  impl Holder {
    fn take<U>(self, b: Box<Option<Ref<Thing>>>, u: U) -> U {
      let _ = b
      u
    }
  }
  
  fn main() {
    let h = Holder {}
    let _ = h.take(Bar {}, 1)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Thing struct {
	n int
}

type Box[T any] interface {
	get() T
}

type Bar struct{}

func (b Bar) get() *Thing {
	return nil
}

type Holder struct{}

func Holder_take[U any](_ Holder, b Box[lisette.Option[*Thing]], u U) U {
	_ = b
	return u
}

func main() {
	h := Holder{}
	Holder_take(h, _lisAdapter_Bar_Box_0{inner: Bar{}}, 1)
}

type _lisAdapter_Bar_Box_0 struct {
	inner Bar
}

func (a _lisAdapter_Bar_Box_0) get() lisette.Option[*Thing] {
	raw := a.inner.get()
	return lisette.OptionFromNilable[*Thing](raw, raw == nil)
}
