tests/spec/emit/snapshots/generic_return_only_type_param.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn default_value<T>() -> Option<T> {
    None
  }
  
  fn test() -> Option<int> {
    default_value()
  }
---
package main

func defaultValue[T any]() (T, bool) {
	return *new(T), false
}

func test() (int, bool) {
	return defaultValue[int]()
}
