tests/spec/emit/snapshots/generic_return_only_type_param_string_vs_int.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Validated<T> { Valid(T), Invalid(string) }
  
  struct ValidationResult<T> {
    value: Validated<T>,
    field_name: string,
  }
  
  impl<T> ValidationResult<T> {
    fn new_invalid(field: string, msg: string) -> ValidationResult<T> {
      ValidationResult { value: Validated.Invalid(msg), field_name: field }
    }
  }
  
  fn validate_positive(field: string, val: int) -> ValidationResult<int> {
    ValidationResult.new_invalid(field, "must be positive")
  }
  
  fn validate_non_empty(field: string, val: string) -> ValidationResult<string> {
    ValidationResult.new_invalid(field, "must not be empty")
  }
---
package main

func MakeValidatedValid[T any](arg0 T) Validated[T] {
	return Validated[T]{Tag: ValidatedValid, Valid: arg0}
}

func MakeValidatedInvalid[T any](arg0 string) Validated[T] {
	return Validated[T]{Tag: ValidatedInvalid, Invalid: arg0}
}

type ValidatedTag uint8

const (
	ValidatedValid ValidatedTag = iota
	ValidatedInvalid
)

type Validated[T any] struct {
	Tag     ValidatedTag
	Valid   T
	Invalid string
}

type ValidationResult[T any] struct {
	value     Validated[T]
	fieldName string
}

func ValidationResult_newInvalid[T any](field, msg string) ValidationResult[T] {
	return ValidationResult[T]{
		value:     MakeValidatedInvalid[T](msg),
		fieldName: field,
	}
}

func validatePositive(field string, _ int) ValidationResult[int] {
	return ValidationResult_newInvalid[int](field, "must be positive")
}

func validateNonEmpty(field, _ string) ValidationResult[string] {
	return ValidationResult_newInvalid[string](field, "must not be empty")
}
