tests/spec/emit/snapshots/generic_static_method_emits_type_params.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Stack<T> { items: Slice<T> }
  
  impl<T> Stack<T> {
    fn new() -> Stack<T> {
      Stack { items: [] }
    }
  }
  
  fn test() {
    let s: Stack<int> = Stack.new();
  }
---
package main

type Stack[T any] struct {
	items []T
}

func Stack_new[T any]() Stack[T] {
	return Stack[T]{items: []T{}}
}

func test() {
	Stack_new[int]()
}
