tests/spec/emit/snapshots/generic_static_method_inferred.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Box<T> { value: T }\n\nimpl<T> Box<T> {\n  fn new(value: T) -> Box<T> {\n    Box { value: value }\n  }\n}\n\nfn main() -> int {\n  let b: Box<int> = Box.new(42);\n  b.value\n}\n"
---
package main

type Box[T any] struct {
	value T
}

func Box_new[T any](value T) Box[T] {
	return Box[T]{value: value}
}

func main() int {
	b := Box_new(42)
	return b.value
}
